# Project2---ARM-version

./: CMakeLists.txt  main.cpp
include/: face_weights.h
src/: face_binary_cls.cpp
